# S6-Service

./: README.md  docker-compose.postgres.yml  docker-compose.yml  index.html  render.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/visma_hq_api/: __init__.py  __main__.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py  seed.py
backend/src/visma_hq_api/routers/: lockers.py  massage.py  me.py  notifications.py  packages.py  rooms.py  wallet.py
backend/tests/: conftest.py  test_api.py
