[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visma-hq-api"
version = "0.1.0"
description = "Backend API for the Visma HQ employee app (concept)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Roger Mollan-Olafsen", email = "roger.mollan-olafsen@visma.com" }]
keywords = ["visma", "hq", "employee-app", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/rogermollan-olafsen-ux/VismaHouseOslo"
Issues = "https://github.com/rogermollan-olafsen-ux/VismaHouseOslo/issues"

[project.scripts]
visma-hq-api = "visma_hq_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/visma_hq_api"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends() in defaults is intentional

[tool.ruff.lint.isort]
known-first-party = ["visma_hq_api"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
